--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     // Translations for tagline and screenshot
     const translations = {
       en: {
-        tagline: "Stay on top of your work shift schedule with a smart all-in-one calendar for overtime, company and national holidays, school breaks, and personal plans—all in one place",
+        tagline: "Stay on top of your work shift schedule and keep track of company holidays, national holidays, and school breaks. All in one smart calendar.",
         screenshot: "assets/app-screenshot.png",
         downloadLabel: "Download the app now!"
       },
