--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   <footer>
     <!-- English footer (default) -->
     <div id="footer-en">
-      <p>&copy; 2025 Dama Code • <a href="/policies/privacy-policy.html" id="privacy-link">Privacy Policy</a></p>
+      <p>&copy; 2025 Dama Code • <a href="policies/privacy-policy.html" id="privacy-link">Privacy Policy</a></p>
     </div>
 
     <!-- Arabic footer (shown only when Arabic is selected) -->
@@ -225,7 +225,7 @@
       <p>رقم توثيق المركز السعودي للأعمال # 0000155228</p>
       <p>info@damacode.com</p>
       <p>© 2025 Dama Code For Information Technology - All Rights Reserved</p>
-      <p><a href="/policies/privacy-policy-ar.html" style="color: #6b7280; text-decoration: none;">سياسة الخصوصية</a></p>
+      <p><a href="policies/privacy-policy-ar.html" style="color: #6b7280; text-decoration: none;">سياسة الخصوصية</a></p>
     </div>
   </footer>
 
