--- a/ar/policies/privacy-policy.html
+++ b/ar/policies/privacy-policy.html
@@ -100,7 +100,9 @@
   <header>
     <nav>
       <a href="/index.html">الصفحة الرئيسية</a>
-      <a href="/contact.html">للتواصل</a>
+
+      <!-- Contact opens the user's default email app -->
+      <a href="mailto:info@damacode.com?subject=ZAM%20Calendar%20Support">للتواصل</a>
     </nav>
   </header>
 
