--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -100,7 +100,9 @@
   <header>
     <nav>
       <a href="/index.html">Home</a>
-      <a href="/contact.html">Contact</a>
+
+      <!-- Contact opens the user's default email app -->
+      <a href="mailto:info@damacode.com?subject=ZAM%20Calendar%20Support">Contact</a>
     </nav>
   </header>
 
