--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -99,7 +99,7 @@
 
   <header>
     <nav>
-      <a href="/index.html">Home</a>
+      <a href="../index.html">Home</a>
 
       <!-- Contact opens the user's default email app -->
       <a href="mailto:info@damacode.com?subject=ZAM%20Calendar%20Support">Contact</a>
