--- a/ar/policies/privacy-policy.html
+++ b/ar/policies/privacy-policy.html
@@ -41,7 +41,7 @@
 
     .muted { color: #9ca3af; }
     .divider { height: 1px; background: #222; margin: 24px 0; }
-    nav { display:flex; gap:16px; align-items:center; }
+    nav { display:flex; gap:16px; align-items:center; justify-content:flex-start; direction:ltr; }
 
     /* Language Switcher (same as template) */
     .lang-switcher {
@@ -99,7 +99,7 @@
 
   <header>
     <nav>
-      <a href="/index.html">الصفحة الرئيسية</a>
+      <a href="../../index.html">الصفحة الرئيسية</a>
 
       <!-- Contact opens the user's default email app -->
       <a href="mailto:info@damacode.com?subject=ZAM%20Calendar%20Support">للتواصل</a>
