--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
   <footer>
     <!-- English footer (default) -->
     <div id="footer-en">
-      <p>&copy; 2025 Dama Code • <a href="policies/privacy-policy.html" id="privacy-link">Privacy Policy</a></p>
+      <p>&copy; 2025 Dama Code • <a href="policies/privacy-policy.html" id="privacy-link">Privacy Policy</a> • <a href="mailto:info@damacode.com?subject=ZAM%20Calendar%20Support">Contact us</a></p>
     </div>
 
     <!-- Arabic footer (shown only when Arabic is selected) -->
@@ -272,7 +272,7 @@
       <p>رقم توثيق المركز السعودي للأعمال # 0000155228</p>
       <p>info@damacode.com</p>
       <p>© 2025 Dama Code For Information Technology - All Rights Reserved</p>
-      <p><a href="/ar/policies/privacy-policy.html/" style="color: #6b7280; text-decoration: none;">سياسة الخصوصية</a></p>
+      <p><a href="https://zamcalendar.com/ar/policies/privacy-policy.html" style="color: #6b7280; text-decoration: none;">سياسة الخصوصية</a> • <a href="mailto:info@damacode.com?subject=ZAM%20Calendar%20Support" style="color: #6b7280; text-decoration: none;">للتواصل</a></p>
     </div>
   </footer>
 
