--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
   <!-- App Store Button -->
   <div class="app-store-btn">
-    <a href="https://apps.apple.com/app/apple-store/id6737015574?pt=127166334&ct=locashare-website&mt=8">
+    <a href="https://apps.apple.com/app/apple-store/id6504942438?pt=127166334&ct=zam-website&mt=8">
       <img
         src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
         alt="Download on the App Store"
