--- a/ar/policies/privacy-policy.html
+++ b/ar/policies/privacy-policy.html
@@ -32,11 +32,12 @@
     a { color: #9ca3af; text-decoration: none; }
     a:hover { text-decoration: underline; }
 
-    h1 { font-size: 2.2em; margin-bottom: 16px; }
-    h2 { font-size: 1.4em; margin: 28px 0 10px; }
+    h1 { font-size: 2.2em; margin-bottom: 16px; font-weight: 700; }
+    h2 { font-size: 1.5em; margin: 32px 0 16px; font-weight: 600; }
 
-    p { color: #cbd5e1; line-height: 1.7; margin: 10px 0; }
-    ul { margin: 8px 0 8px 18px; color: #cbd5e1; }
+    p { color: #9ca3af; line-height: 1.8; margin: 12px 0; font-size: 1em; }
+    strong { color: #e5e7eb; font-weight: 600; }
+    ul { margin: 8px 0 8px 18px; color: #9ca3af; }
     li { margin: 6px 0; }
 
     .muted { color: #9ca3af; }
