--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -118,12 +118,11 @@
     This privacy policy outlines the types of personal information we collect from our customers, how we use it, and the choices available to them regarding its use. It also explains how customers can contact us with any questions or concerns about our practices.</p>
 
     <p><strong>No Need for any Registration and Sign In</strong><br>
-    Our app is designed for use without requiring sign-up, registration, or sign-in. You do not need to provide your name or email, and we do not collect this information.</p>
+    Our app is designed for use without requiring sign-up or registratio. You do not need to provide your name or email, and we do not collect this information.</p>
 
     <p><strong>Total Privacy We Never Access Your Personal Event Data</strong><br>
-    Your Personal Event data (means the calendar events you create) remains private and accessible <em>only</em> by you. It saved on your device (or your iCloud account, if enabled). We <em><strong>never</strong></em> have access to your event data. We <em><strong>never</strong></em> upload or save your event data on our servers.<br><br>
-    - Local Storage: All the personal event data you enter stays securely on your device.<br>
-    - iCloud Storage: If you choose to enable iCloud synchronization, your personal event data is stored in your personal iCloud account. This process is handled solely by Apple and is subject to Apple's privacy policies.</p>
+    Your Personal Event data (means the calendar events you create) remains private and accessible <em>only</em> by you. It saved on your offical Apple Calendar App. We <em><strong>never</strong></em> have access to your event data. We <em><strong>never</strong></em> upload or save your event data on our servers.<br><br>
+    - iCloud Storage: If you choose to enable iCloud synchronization, your personal event data is stored in your personal Apple Calendar iCloud account. This process is handled solely by Apple and is subject to Apple's privacy policies.</p>
 
     <p><strong>We do not collect any data that directly identifies you</strong><br>
     The information you provide below is completely <em><strong>anonymous</strong></em> and cannot be linked to your identity. It is used solely to ensure that the app functions as intended. This includes:</p>
