Update privacy policy contact information and storage details

--- a/ar/policies/privacy-policy.html
+++ b/ar/policies/privacy-policy.html
@@ -121,9 +121,8 @@
     تم تطوير تطبيق ZAM Calendar للاستخدام دون الحاجة لإنشاء حساب أو تسجيل الدخول. لست بحاجة إلى تقديم اسمك أو بريدك الإلكتروني، ولا نقوم بجمع هذه المعلومات.</p>
 
     <p><strong>الخصوصية التامة – لا يمكننا الوصول إلى بيانات أحداثك الشخصية</strong><br>
-    تبقى بيانات أحداثك الشخصية (أي الأحداث التي تنشئها في التقويم) خاصة ولا يمكن لأي شخص سواك الوصول إليها. يتم حفظها على جهازك -أو في حساب iCloud الخاص بك إذا كان مفعّلًا-. لا يمكننا الاطلاع على بيانات أحداثك، ولا نقوم بتحميلها أو تخزينها على خوادمنا.<br>
-    • التخزين المحلي: تظل جميع بيانات أحداثك الشخصية مخزنة بأمان على جهازك.<br>
-    • التخزين عبر iCloud: إذا اخترت تفعيل مزامنة iCloud، فسيتم تخزين بيانات أحداثك الشخصية في حساب iCloud الخاص بك. تتم هذه العملية بالكامل من خلال Apple وتخضع لسياسات الخصوصية الخاصة بها.</p>
+    تبقى بيانات أحداثك الشخصية (أي الأحداث التي تنشئها في التقويم) خاصة ولا يمكن لأي شخص سواك الوصول إليها. يتم حفظها على تقويم آبل الرسمي -أو في حساب iCloud الخاص بك إذا كان مفعّلًا-. لا يمكننا الاطلاع على بيانات أحداثك، ولا نقوم بتحميلها أو تخزينها على خوادمنا.<br>
+    • التخزين عبر iCloud: إذا اخترت تفعيل مزامنة iCloud، فسيتم تخزين بيانات أحداثك الشخصية في تقويم آبل الرسمي حساب iCloud الخاص بك. تتم هذه العملية بالكامل من خلال Apple وتخضع لسياسات الخصوصية الخاصة بها.</p>
 
     <p><strong>لا يتم جمع أي بيانات تحدد هويتك بشكل مباشر</strong><br>
     المعلومات التي تقدمها أدناه تظل مجهولة تمامًا ولا يمكن ربطها بهويتك. يتم استخدامها فقط لضمان عمل التطبيق كما هو مطلوب، وتشمل ما يلي:<br>
@@ -161,7 +160,7 @@
     <p><strong>للتواصل</strong></p>
     <p>داما كود لتقنية المعلومات<br>
     العنوان: الجبيل، المنطقة الشرقية، 35513، المملكة العربية السعودية<br>
-    البريد الإلكتروني: info@damacode.com<br>
+    البريد الإلكتروني: support@zamcalendar.com<br>
     رقم اعتماد مركز الأعمال السعودي: 0000155228</p>
 
     <div class="divider"></div>
