Update image slides and initial slide index

--- a/index.html
+++ b/index.html
@@ -324,10 +324,16 @@
           <img src="assets/app-screenshot-2.png" alt="Zam Calendar - Calendar View" data-en="assets/app-screenshot-2.png" data-ar="assets/app-screenshot-2-ar.png" />
         </div>
         <div class="swiper-slide">
+          <img src="assets/app-screenshot-3.png" alt="Zam Calendar - Schedule View" data-en="assets/app-screenshot-3.png" data-ar="assets/app-screenshot-3-ar.png" />
+        </div>
+        <div class="swiper-slide">
           <img src="assets/app-screenshot.png" alt="Zam Calendar - Main View" data-en="assets/app-screenshot.png" data-ar="assets/app-screenshot-ar.png" />
         </div>
         <div class="swiper-slide">
-          <img src="assets/app-screenshot-3.png" alt="Zam Calendar - Schedule View" data-en="assets/app-screenshot-3.png" data-ar="assets/app-screenshot-3-ar.png" />
+          <img src="assets/app-screenshot-4.png" alt="Zam Calendar - Feature View" data-en="assets/app-screenshot-4.png" data-ar="assets/app-screenshot-4-ar.png" />
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/app-screenshot-5.png" alt="Zam Calendar - Details View" data-en="assets/app-screenshot-5.png" data-ar="assets/app-screenshot-5-ar.png" />
         </div>
       </div>
       <div class="swiper-pagination"></div>
@@ -466,7 +472,7 @@
       grabCursor: true,
       centeredSlides: true,
       slidesPerView: 'auto',
-      initialSlide: 1,
+      initialSlide: 2,
       loop: false,
       slideToClickedSlide: true,
 
