Change App Store button image source
Updated App Store button image source to local asset.

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
   <div class="app-store-btn">
     <a href="https://apps.apple.com/app/apple-store/id6504942438?pt=127166334&ct=zam-website&mt=8">
       <img
-        src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+        src="assets/appstore-button.png"
         alt="Download on the App Store"
       >
     </a>
@@ -541,8 +541,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
