--- a/ar/policies/privacy-policy.html
+++ b/ar/policies/privacy-policy.html
@@ -101,8 +101,7 @@
   <header>
     <nav>
       <a href="../../index.html">الصفحة الرئيسية</a>
-
-      <!-- Contact opens the user's default email app -->
+      <a href="index.html">العودة لسياسات الخصوصية</a>
       <a href="mailto:info@damacode.com?subject=ZAM%20Calendar%20Support">للتواصل</a>
     </nav>
   </header>
@@ -158,9 +157,9 @@
     <p>باستخدامك تطبيق ZAM Calendar الذي طورته "داما كود لتقنية المعلومات"، فإنك تقر بأنك قد قرأت وفهمت سياسة الخصوصية هذه وتوافق على جمع بياناتك واستخدامها كما هو موضح.</p>
 
     <p><strong>للتواصل</strong></p>
-    <p>داما كود لتقنية المعلومات<br>
+    <p>شركة داما كود لتقنية المعلومات<br>
     العنوان: الجبيل، المنطقة الشرقية، 35513، المملكة العربية السعودية<br>
-    البريد الإلكتروني: support@zamcalendar.com<br>
+    البريد الإلكتروني: info@damacode.com<br>
     رقم اعتماد مركز الأعمال السعودي: 0000155228</p>
 
     <div class="divider"></div>
