--- a/policies/privacy-policy-business.html
+++ b/policies/privacy-policy-business.html
@@ -179,7 +179,7 @@
 
     <p>To exercise any of these rights, please contact us using the details below.</p>
 
-    <p><strong></strong>Account Deletion</strong></p>
+    <p><strong>Account Deletion</strong></p>
     <p>
       If you want to request account deletion / data deletion, please contact us by email.
     </p>
